[package]
name = "certificate-pinning-rust"
version = "0.0.1"
authors = ["JBirdVegas <jon@jbird.dev>"]
edition = "2018"


[dependencies]
curl = "0.2.11"
nom = "5.1.2"
rust-crypto = "0.2.36"
rustls = { version = "0.18.1", features = ["dangerous_configuration"] }
rustls-native-certs = "0.4.0"
rustls-connector = "0.12.0"
openssl = "0.10.9"
url = "2.1.1"
serde_json = "1.0.58"
serde = "1.0.116"
